@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add positioning helpers. Add table.count_pairs(). Update spring algo.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Update coding style document.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
